# docudocker

./: CHANGELOG.md  Dockerfile  README.md  compose.example.yml  compose.proxy.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  docker_client.py  formatters.py  logging_utils.py  main.py  models.py  service.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: ARCHITECTURE.md  BACKWARD_COMPATIBILITY.md  BUILD_VALIDATION.md  COMMIT_NOTES.md  CONFIGURATION.md  DATABASE_MIGRATION_REVIEW.md  DEPENDENCY_VALIDATION.md  OBSERVABILITY.md  PERFORMANCE.md  RELEASE_NOTES.md  ROLLBACK_PLAN.md  SECURITY_REVIEW.md  STATIC_ANALYSIS.md  TEST_PLAN.md  VALIDATION_SUMMARY.md
docs/verification/: INDEX.md
scripts/: performance_check.py
tests/: test_config.py  test_formatters.py  test_routes.py  test_service.py
