[project]
name = "docudocker-webapp"
version = "01.00.00"
description = "Lightweight web application that documents local Docker infrastructure."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI" }]
dependencies = [
  "fastapi==0.111.0",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "uvicorn==0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
warn_unreachable = true
exclude = ["^tests/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv_build", ".pytest_cache"]
skips = ["B101"]
